# covid-19

./: .gitignore  README.md  pyproject.toml  test.py
covid19/: WPP2019_TotalPopulation.csv  __init__.py  run.py  who.py
covid19/countries/: __init__.py  de.py  us.py
covid19/lib/: classes.py  functions.py
