[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
covid19 = ["WPP2019_TotalPopulation.csv"]

[project]
name = "covid19"
description = "COVID-19 World Data"
version = "0.0.1"
authors = [
    { name = "Yoon" },
    { name = "Rasmus Antons", email = "mail@rasmusantons.de" }
]
dependencies = [
    "numpy~=2.0",
    "pandas~=2.2",
    "googlemaps~=4.10"
]
